@@ -3,6 +3,10 @@
 with new instance
 - fixes to postgres reflection to better handle when schema names are present;
 thanks to jason (at) ncsmags.com [ticket:402]
+- fix to correlation of subqueries when the column list of the select statement
+is constructed with individual calls to append_column(); this fixes an ORM
+bug whereby nested select statements were not getting correlated with the 
+main select generated by the Query object.
 
 0.3.3
 - string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
